src/objects/Volunteers_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Custom settings used by Volunteers for Salesforce.</description>
    <fields>
        <fullName>Contact_Match_Email_Fields__c</fullName>
        <inlineHelpText>A semicolon separated list of additional Contact email fields to try to match against when doing Contact matching. Note that the fields are specified by their full Developer name, including namespace prefix. NPSP email fields are automatically checked.</inlineHelpText>
        <label>Contact Match Email Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Match_First_Name_Fields__c</fullName>
        <inlineHelpText>A semicolon separated list of additional Contact first name fields to try to match against when doing Contact matching. E.g., a nickname field.  Note that the fields are specified by their full Developer name, including namespace prefix.</inlineHelpText>
        <label>Contact Match First Name Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notice_Board__c</fullName>
        <label>Notice Board</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Personal_Site_Org_Wide_Email_Name__c</fullName>
        <inlineHelpText>The Display Name of the Organization-Wide Email Address to use on the email sent from the PersonalSiteContactLookup Sites page.</inlineHelpText>
        <label>Personal Site Org-Wide Email Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Job_Future_Months__c</fullName>
        <defaultValue>12</defaultValue>
        <inlineHelpText>How many months into the future should the recurring job shift be scheduled?</inlineHelpText>
        <label>Recurring Job Future Months</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signup_Bucket_Account_On_Create__c</fullName>
        <inlineHelpText>The name of the account to use when creating new Contacts during Signup.  If you are using the Non Profit Start Pack One-to-One model, leave this setting blank.  If you are using the bucket model, set this to the name of the account; usually &apos;Individual&apos;.</inlineHelpText>
        <label>Signup Bucket Account On Create</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signup_Creates_Contacts_If_No_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Should the Volunteer Signup form create new Contact records, if no existing contact is found (or Signup Matches Existing Contacts is unchecked).  If this setting is unchecked, it will create Leads when no matches found.</inlineHelpText>
        <label>Signup Creates Contacts If No Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signup_Matches_Existing_Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Should the Volunteer Signup page try to match the person to an existing Contact (by First Name, Last Name, Email).</inlineHelpText>
        <label>Signup Matches Existing Contacts</label>
        <type>Checkbox</type>
    </fields>
    <label>Volunteers Settings</label>
</CustomObject>